--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:posts": "tsx src/seeds/post-seed.ts"
   },
   "repository": {
     "type": "git",
