--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:posts": "tsx src/seeds/post-seed.ts"
+    "seed:posts": "tsx src/seeds/post-seed.ts",
+    "seed:authors": "tsx src/seeds/author-seed.ts",
+    "seed:news": "tsx src/seeds/news-seed.ts",
+    "seed:all": "tsx src/seeds/master-seed.ts"
   },
   "repository": {
     "type": "git",
