Enhance help content functionality
- Add new help routes and controllers for collections and articles
- Implement get_all_collections, get_collection_by_id, and get_article_by_id endpoints
- Update package.json with new seed scripts for collections and articles
- Introduce collection and article models with necessary fields
- Implement article count update logic for collections
- Create initialization script for setting up collection article counts
- Seed initial help content data for testing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "seed:posts": "tsx src/seeds/post-seed.ts",
     "seed:authors": "tsx src/seeds/author-seed.ts",
     "seed:news": "tsx src/seeds/news-seed.ts",
-    "seed:all": "tsx src/seeds/master-seed.ts"
+    "seed:collections": "tsx src/seeds/collection-seed.ts",
+    "seed:articles": "tsx src/seeds/article-seed.ts",
+    "seed:help": "tsx src/seeds/help-seed.ts",
+    "seed:help-expanded": "tsx src/seeds/help-seed.ts",
+    "seed:all": "tsx src/seeds/master-seed.ts",
+    "init:collection-counts": "tsx src/scripts/initialize-collection-counts.ts"
   },
   "repository": {
     "type": "git",
