Update dependencies, enhance configuration, and modify seed data
- Added new dependencies: @ai-sdk/openai and ai
- Updated .gitignore to exclude data.ts file
- Enhanced environment configuration by adding openaiApiKey
- Modified post categories to include 'service'
- Updated post seed data with new service-related entries
- Integrated chat router into app.ts and commented out the default root route

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "homepage": "https://github.com/srinivas-prodgain/chatbot-be#readme",
   "description": "Backend API for chatbot application",
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.24",
+    "ai": "^5.0.33",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
