--- a/package.json
+++ b/package.json
@@ -37,18 +37,24 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "mammoth": "^1.10.0",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1",
+    "voyageai": "^0.0.8",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/markdown-it": "^14.1.2",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^24.3.0",
+    "@types/pdf-parse": "^1.1.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
