Integrate conversation handling and enhance chat functionality
- Updated .env.example to include OPENAI_API_KEY
- Added conversation router to app.ts for managing conversations
- Enhanced stream-chat controller to handle conversation creation and message saving
- Updated conversation and message models for improved structure and naming consistency
- Modified chat route to include conversation ID in the request

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DB_URL=mongodb://localhost:27017/chatbot-db
 # Frontend Configuration
 FRONTEND_URL=http://localhost:3000
 VOYAGE_API_KEY=xyz
+OPENAI_API_KEY=zzzz
