--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "multer": "^2.0.2",
     "pdf-parse": "^1.1.1",
     "voyageai": "^0.0.8",
-    "zod": "^4.1.5"
+    "zod": "^3.25.76",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
