Refactor naming conventions to snake_case across models and controllers
- Updated various models and controllers to use snake_case for properties and variables, ensuring consistency throughout the codebase.
- Added new migration and validation scripts to package.json for improved database management.
- Adjusted related fields in the article, collection, conversation, and news models to align with the new naming convention.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "seed:help": "tsx src/seeds/help-seed.ts",
     "seed:help-expanded": "tsx src/seeds/help-seed.ts",
     "seed:all": "tsx src/seeds/master-seed.ts",
-    "init:collection-counts": "tsx src/scripts/initialize-collection-counts.ts"
+    "init:collection-counts": "tsx src/scripts/initialize-collection-counts.ts",
+    "migrate:snake-case": "tsx migrations/run-all-migrations.ts",
+    "validate:migrations": "tsx migrations/validate-migrations.ts"
   },
   "repository": {
     "type": "git",
