Enhance type safety and refactor constants across the application
- Added new constants for categories, conversation statuses, message senders, and user preferences to improve code organization and maintainability.
- Updated models and controllers to utilize these constants, ensuring consistent usage throughout the codebase.
- Refactored environment variable handling in .env.example to include new boolean flags for production and development environments.
- Removed unused imports and optimized existing code for better clarity and performance.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ DB_URL=mongodb://localhost:27017/chatbot-db
 FRONTEND_URL=http://localhost:3000
 VOYAGE_API_KEY=xyz
 OPENAI_API_KEY=zzzz
+IS_PROD=boolean
+IS_DEV=boolean
